--- a/_config.yml
+++ b/_config.yml
@@ -39,14 +39,14 @@ avatar: "/img/BartRoels062018.jpg"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#4d4d4d"
-navbar-text-col: "#f5f5f5"
+navbar-text-col: "#ffffff"
 navbar-children-col: "#4d4d4d"
 page-col: "#FFFFFF"
-link-col: "#008AFF"
+link-col: "#33a0ff"
 hover-col: "#0085A1"
 footer-col: "#4d4d4d"
-footer-text-col: "#f5f5f5"
-footer-link-col: "#404040"
+footer-text-col: "#ffffff"
+footer-link-col: "#33a0ff"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
@@ -60,7 +60,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Bart Roels
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -93,7 +93,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "https://bartroels.github.io/aboutme/"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
