--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Welcome to my Blog
+title: Welcome to my website
 
 # Short description of your site
-description: Bart Roels Blog
+description: Bart Roels
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
