--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ avatar: "/img/BartRoels062018.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+title-img: /img/stormtroopocat.png
 
 # --- Background colour/image options --- #
 
