--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,8 @@ title-separator: "-"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/Vancouver"
-markdown: kramdown
+markdown: CommonMark
+# markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
