--- a/_config.yml
+++ b/_config.yml
@@ -155,9 +155,10 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
-markdown: CommonMark
-# markdown: kramdown
+# timezone: "America/Vancouver"
+timezone: "Europe/Brussels"
+# markdown: CommonMark
+markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
