--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ avatar: "/img/BartRoels062018.jpg"
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
 # title-img: /img/stormtroopocat.png
-title-img: /img/AzureNinjaCatLogo.jpg
+title-img: /img/AzureNinjaCatLogo.png
 
 # --- Background colour/image options --- #
 
